<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            tools:context=".scene.MainActivity">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="result: "
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="id"
                app:layout_constraintTop_toBottomOf="@id/tv_result" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="pw"
                app:layout_constraintTop_toBottomOf="@id/et_id" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="로그인"
                app:layout_constraintTop_toBottomOf="@id/et_pw" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_store_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="stored: "
                app:layout_constraintTop_toBottomOf="@id/btn_login" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/fl_progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_color_20"
            android:elevation="4dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">

            <include
                android:id="@+id/include_progress"
                layout="@layout/layout_circle_progress" />
        </FrameLayout>
    </FrameLayout>
</layout>